# perceptron

./: .gitignore  README.md  pyproject.toml
notebooks/: mm_include.py  perceptron.ipynb  perceptron_64.ipynb  perceptron_64_inputs.ipynb  perceptron_diagram.ipynb  perceptron_simple_deck.ipynb  perceptron_space_hills.ipynb
perceptron/: perceptron.py
