[tool.poetry]
name = "perceptron"
version = "0.1.0"
description = ""
authors = ["ashanbh <537598+ashanbh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
numpy = "^2.0.1"
plotly = "^5.23.0"
matplotlib = "^3.9.1"
scipy = "^1.14.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
